@startuml 
left to right direction
class User{
    -id:int
    -name:string
    -email:string
    -password:string
    -avatar:cloudnairyId
}
class Post{
    -id:int
    -publishedAt:Date
    -title:string
    -image:cloudnairyId
}
class UserPost{
    -userId:int
    -postId:int

} 

class List {
    -id:int
}
class Task{
    -id:int
}

List "*"

User "1" --> "*" UserPost
Post "1" --> "*" UserPost

@enduml